// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`redraw render snapshot of a medium map renders the loaded map 1`] = `
{
  "canvas": "b4288d32ef3c",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=52b253bec858 line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=7d6db44d84b8 line=14465d00ae9e",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=f29f9e8bd3f5 line=ca9c29b657b7",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=b48fecefbf72 line=9f1a5678f79b",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=a9cd6a98313d line=3e2ab23edb2e",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=f1e7593b3972 line=d1b8ffed00d3",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=af61cab1fc75 line=758c5d149d80",
  "topic 15": "pos=-139.5,-368.5 size=96x74 order=1 group=293d7129a7f5 line=bd8ab79b64a2",
  "topic 16": "pos=-269.5,-469 size=104x47 order=0 group=edea8153d262 line=8ff79eea0f78",
  "topic 17": "pos=-386,-519.5 size=69x34 order=0 group=28811f9f052d line=d59a09964cdd",
  "topic 18": "pos=-403,-447 size=103x34 order=1 group=8531575ec767 line=090bbce2020c",
  "topic 19": "pos=-519,-475.5 size=69x34 order=0 group=ab8c44b4de9b line=cfebc4cb2865",
  "topic 2": "pos=224,-459 size=63x34 order=0 group=212d3cf1a27f line=4f503fe43297",
  "topic 20": "pos=-536.5,-425 size=104x47 order=1 group=bd1c4b3ab283 line=9413fa28a031",
  "topic 21": "pos=-252,-340 size=69x34 order=1 group=b9cdc93fd4e6 line=095d7fb4283b",
  "topic 22": "pos=-376.5,-362 size=120x59 order=0 group=841b3a1be5fe line=bd7503a81e31",
  "topic 23": "pos=-419.5,-305.5 size=206x34 order=1 group=35d24b9816b6 line=1ce7ec5be22a",
  "topic 24": "pos=-278,-239.5 size=121x47 order=2 group=7f762d148eb2 line=ff5bdbeb7750",
  "topic 25": "pos=-411.5,-261.5 size=86x34 order=0 group=f0780872cf41 line=873d14f9a3a7",
  "topic 26": "pos=-403,-217.5 size=69x34 order=1 group=9f4726a0308b line=da673a495ebc",
  "topic 27": "pos=139.5,28.5 size=96x38 order=2 group=2d8f9e7c05e0 line=ca5bbb98e3c7",
  "topic 28": "pos=261,-84.5 size=87x47 order=0 group=3fbbdce225fb line=97ff92749764",
  "topic 29": "pos=369,-135 size=69x34 order=0 group=0d280c8b9d04 line=6cd23da98ee3",
  "topic 3": "pos=385.5,-509.5 size=200x34 order=0 group=1e7b61668148 line=ee43cfc7eb24",
  "topic 30": "pos=386,-62.5 size=103x34 order=1 group=0a5562c7aff4 line=116953992434",
  "topic 31": "pos=502,-91 size=69x34 order=0 group=e0e79c0254d7 line=821a37786d39",
  "topic 32": "pos=519.5,-40.5 size=104x47 order=1 group=fa004b969f41 line=4a3673ec52c9",
  "topic 33": "pos=396.5,57 size=358x59 order=1 group=1f891cb3f691 line=301638453957",
  "topic 34": "pos=665.5,22.5 size=120x59 order=0 group=4353dbbdc9ef line=e6aa36264a65",
  "topic 35": "pos=680.5,91.5 size=150x59 order=1 group=66ebce9cd215 line=deed6ed9cf5c",
  "topic 36": "pos=278,170 size=121x47 order=2 group=81cfb5149536 line=315b87af4910",
  "topic 37": "pos=403,148 size=69x34 order=0 group=e2a81fe80e0b line=d780ccedfd88",
  "topic 38": "pos=403,192 size=69x34 order=1 group=89765d4e321d line=990e70b0b59d",
  "topic 39": "pos=-130.5,-17.5 size=78x38 order=3 group=e0a7bb11bec1 line=b15eec4ebde8",
  "topic 4": "pos=559,-531.5 size=87x47 order=0 group=0a31e3c2e08c line=c4c37fa6db29",
  "topic 40": "pos=-260,-105.5 size=121x47 order=0 group=645d396e61ac line=38dafdbb02a3",
  "topic 41": "pos=-385,-173.5 size=69x34 order=0 group=04b691c5f56c line=12fad9f6cb1f",
  "topic 42": "pos=-393.5,-83.5 size=86x34 order=1 group=3d162f3abe76 line=db9a524e2c5e",
  "topic 43": "pos=-569.5,-129.5 size=206x34 order=0 group=8ba653714170 line=11ec862c0264",
  "topic 44": "pos=-542,-61.5 size=151x82 order=1 group=5ad3a59ad1ad line=a70475ae2e14",
  "topic 45": "pos=-251,28.5 size=103x34 order=1 group=7f4d22a7f783 line=0a3fb02d8698",
  "topic 46": "pos=-367,6.5 size=69x34 order=0 group=b78868139950 line=a46b7d563401",
  "topic 47": "pos=-367,50.5 size=69x34 order=1 group=74b5db802c18 line=2b081686fae3",
  "topic 48": "pos=-260,116.5 size=121x47 order=2 group=a05fca0fb6eb line=229920412820",
  "topic 49": "pos=-385,94.5 size=69x34 order=0 group=17ab14b4142e line=5d6b493ee4f3",
  "topic 5": "pos=555.5,-481 size=80x34 order=1 group=1437c44acf80 line=379f08a83b76",
  "topic 50": "pos=-393.5,138.5 size=86x34 order=1 group=85c42cd7bcbb line=f9f71dd8fe5b",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=0c529ad7a026 line=da39a3ee5e6b",
  "topic 51": "pos=130.5,387 size=78x38 order=4 group=34f0e7b0b435 line=9f9c75bb6aa8",
  "topic 52": "pos=243,299 size=87x47 order=0 group=fb2fb9ac452c line=fcafa6c2f3dd",
  "topic 53": "pos=419.5,236 size=206x34 order=0 group=0f492442a5ef line=e0aa863949c2",
  "topic 54": "pos=368,321 size=103x34 order=1 group=e61471222753 line=9323b25729c5",
  "topic 55": "pos=524.5,292.5 size=150x59 order=0 group=96af63051cd1 line=c73273f5cfc0",
  "topic 56": "pos=501.5,355.5 size=104x47 order=1 group=a4633f5861d7 line=0520e06a1145",
  "topic 57": "pos=234,428 size=69x34 order=1 group=df6c43c13a6c line=031365d91b32",
  "topic 58": "pos=333,406 size=69x34 order=0 group=b91975459c43 line=4676d5f908dc",
  "topic 59": "pos=333,450 size=69x34 order=1 group=d053b82f59a7 line=a48dc8c10ae1",
  "topic 6": "pos=325.5,-408.5 size=80x34 order=1 group=6de4bb4d5db7 line=0b91bee6ed96",
  "topic 60": "pos=260,516 size=121x47 order=2 group=8e3e0b638d1f line=2a5db2154439",
  "topic 61": "pos=385,494 size=69x34 order=0 group=cb8cdca227fe line=1709c0452e2c",
  "topic 62": "pos=385,538 size=69x34 order=1 group=0b522ad098d4 line=f6ac278e7c4e",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=dbf1279423a3 line=8761c60f26b6",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=d063113eaf0a line=37ede42beae8",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=5a84fdabefb9 line=f2b6e580e209",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=537c8f6a1b3f line=2283c269a934",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=b53d617f4d05 line=f84e6f8bc1ae",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=cbb9131d01af line=1882af4c714e",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=d5dc37826783 line=e926bbc52454",
  "topic 7": "pos=427,-437 size=63x34 order=0 group=2cf6fefb8392 line=1de3ff0b54b2",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=7cba076e9d2a line=3d0050f48def",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=c038bc53b31c line=7326c1f7aae2",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=adef3177b93a line=35a24638b9da",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=421fac015705 line=174629ac4be6",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=475d677d98eb line=83694791f45f",
  "topic 8": "pos=447.5,-386.5 size=104x47 order=1 group=a9a4d46ff90d line=52fab0052e24",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=a47637fd0ca2 line=5de042427663",
}
`;

exports[`redraw render snapshot of a medium map renders the same after changing the theme: prism 1`] = `
{
  "canvas": "cc0288bd6dd4",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=4020e5782569 line=da39a3ee5e6b",
  "topic 1": "pos=154.5,-358.5 size=126x68 order=0 group=87cab6a85d17 line=6ea12aa97c6d",
  "topic 10": "pos=572.5,-315.5 size=272x68 order=0 group=c1b51d907c3a line=cae3f994797b",
  "topic 11": "pos=496.5,-216.5 size=120x110 order=1 group=73b49ab49d82 line=8ab408806f38",
  "topic 12": "pos=350.5,-78.5 size=206x93 order=2 group=d67e0e490e47 line=c7b1d6b22bb1",
  "topic 13": "pos=688,-117.5 size=409x68 order=0 group=6e140ff59e89 line=1ef6404c5f52",
  "topic 14": "pos=552,-39.5 size=137x68 order=1 group=11eecd28bdbd line=3bdb56443f48",
  "topic 15": "pos=139.5,172.5 size=96x74 order=2 group=535b0d61fd65 line=d24d7a389179",
  "topic 16": "pos=269.5,72 size=104x47 order=0 group=e15c35311e2a line=7cb5806ca461",
  "topic 17": "pos=386,21.5 size=69x34 order=0 group=14fbb84287ca line=292e5c5c0319",
  "topic 18": "pos=403,94 size=103x34 order=1 group=319cff4907ac line=b34343c7430d",
  "topic 19": "pos=519,65.5 size=69x34 order=0 group=b72ce30f6062 line=85eed995cfb5",
  "topic 2": "pos=375.5,-535.5 size=256x93 order=0 group=c6e78b5d05f5 line=2c96979a324d",
  "topic 20": "pos=536.5,116 size=104x47 order=1 group=30f47998213b line=d0494b117a9a",
  "topic 21": "pos=252,201 size=69x34 order=1 group=54ba3f3d10e5 line=084413dc12d1",
  "topic 22": "pos=376.5,179 size=120x59 order=0 group=f36b0d612c27 line=49adce2f86c1",
  "topic 23": "pos=419.5,235.5 size=206x34 order=1 group=528208d9d993 line=c7f4be5dc597",
  "topic 24": "pos=278,301.5 size=121x47 order=2 group=073b9aaffb22 line=42522055d691",
  "topic 25": "pos=411.5,279.5 size=86x34 order=0 group=cb241858b7f5 line=25defb1479c8",
  "topic 26": "pos=403,323.5 size=69x34 order=1 group=2a9305aef659 line=ba5e2383e437",
  "topic 27": "pos=139.5,531 size=96x38 order=4 group=d9792144cdbf line=fba3a2e567fc",
  "topic 28": "pos=261,418 size=87x47 order=0 group=862ad58c584b line=dc4d61403d62",
  "topic 29": "pos=369,367.5 size=69x34 order=0 group=8875dd28fef3 line=d111c42e99f9",
  "topic 3": "pos=673,-626 size=279x68 order=0 group=cea2aa5ff4e0 line=a13b2a0b8b0c",
  "topic 30": "pos=386,440 size=103x34 order=1 group=d022411d428e line=aa679faef45b",
  "topic 31": "pos=502,411.5 size=69x34 order=0 group=aecffb439cc0 line=12694a6086c5",
  "topic 32": "pos=519.5,462 size=104x47 order=1 group=f8b8212a2e8e line=b56324b35cec",
  "topic 33": "pos=396.5,559.5 size=358x59 order=1 group=ddc3e5c9a454 line=7f3b946bf3df",
  "topic 34": "pos=665.5,525 size=120x59 order=0 group=aaaeb7ffae00 line=5617841a231d",
  "topic 35": "pos=680.5,594 size=150x59 order=1 group=bed7fb421076 line=40fe0daf1420",
  "topic 36": "pos=278,672.5 size=121x47 order=2 group=0e78267d744f line=3ed6c7a8b922",
  "topic 37": "pos=403,650.5 size=69x34 order=0 group=0f1cf91aab35 line=3f9c549b66b2",
  "topic 38": "pos=403,694.5 size=69x34 order=1 group=7cb80b85e688 line=1360e6e5a97f",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=2a344c90aeca line=9e1c43a9dafc",
  "topic 4": "pos=929,-665 size=173x93 order=0 group=ac652a70f4f8 line=de1497e71722",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=36fab81ec4f7 line=2ca680ad4ac3",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=f913da378343 line=c01657f1f032",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=d1f98ab1a00a line=362f559f6838",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=c3b49cb73df1 line=df7121932047",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=2542913ef71e line=bfb48921b42f",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=9d5dd8cc2e9c line=c2eb270406b8",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=0b579070e40d line=38c0e60f4993",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=447101ef5305 line=8f8d05511c38",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=555db234d6d0 line=5cdd4b8ceac7",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=3080eb3885e1 line=90da39a3f710",
  "topic 5": "pos=922,-574.5 size=159x68 order=1 group=858abd9db254 line=a720033d6434",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=e7f651369f5f line=38459de63849",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=0c529ad7a026 line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=e44ebac5caa6 line=7f4c5696cc3c",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=58a621b1ccaf line=9515fe389332",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=740f33d61d05 line=7ef1e5e71f58",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=229cfe50b9c6 line=7a54ca9ba9fe",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=c6570adee23c line=f9d77a1bfc8c",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=59620828e091 line=9ce71ff80d81",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=a577f0dafa02 line=4765955ad45d",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=057a23a72ceb line=0525849dfa31",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=855dcc8f69a9 line=03765c81a874",
  "topic 6": "pos=613,-445 size=159x68 order=1 group=e22756454799 line=3bc2584f3f00",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=d2450782017f line=761ff9f3e3f1",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=a2d45e36eb4d line=64fafbb55ff8",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=ae64c5d495a1 line=5a785fc5d6e5",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=20847fa942ca line=2331792e11b2",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=a3701e8f3ff5 line=f716cd2235ec",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=5ea8fbe568a7 line=7f56f9c1f5b6",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=7feb84088ae9 line=7403fa7c4bfd",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=191dcd1d629b line=c3c14d767731",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=9fac7942c4dc line=2ba37e7e6e65",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=e1e2db6de7f6 line=efac6036021f",
  "topic 7": "pos=785.5,-496.5 size=126x68 order=0 group=c29f72ee951d line=2ded20e7a888",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=8cdbd63717d0 line=3d0050f48def",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=aed715a4236c line=7326c1f7aae2",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=a90315e11330 line=4a3df9b8f5d5",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=763adf4fb442 line=e98fdecaa0a1",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=32615a6a5ef6 line=da43145cd70e",
  "topic 8": "pos=825.5,-406 size=206x93 order=1 group=3b33f58ee5a2 line=88e1563d7e33",
  "topic 9": "pos=327,-255.5 size=159x125 order=1 group=9ecc32236372 line=364c842ff415",
}
`;

exports[`redraw render snapshot of a medium map renders the same after changing the theme: prism dark 1`] = `
{
  "canvas": "3d4ded0adee8",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=a0eba9f161f2 line=da39a3ee5e6b",
  "topic 1": "pos=154.5,-358.5 size=126x68 order=0 group=87cab6a85d17 line=b9142a0a1086",
  "topic 10": "pos=572.5,-315.5 size=272x68 order=0 group=56720e4c09ca line=968f6abeb8e8",
  "topic 11": "pos=496.5,-216.5 size=120x110 order=1 group=73b49ab49d82 line=a7718b2a2e40",
  "topic 12": "pos=350.5,-78.5 size=206x93 order=2 group=dabaa5ccb4d5 line=69920694442e",
  "topic 13": "pos=688,-117.5 size=409x68 order=0 group=3a1990934515 line=e51a91882dff",
  "topic 14": "pos=552,-39.5 size=137x68 order=1 group=ea47a1732641 line=84083ecf625a",
  "topic 15": "pos=139.5,172.5 size=96x74 order=2 group=4948d6169313 line=421e767addc4",
  "topic 16": "pos=269.5,72 size=104x47 order=0 group=e33634610ce9 line=0d419d9e9e05",
  "topic 17": "pos=386,21.5 size=69x34 order=0 group=095b8b5e881a line=7eb4128d5606",
  "topic 18": "pos=403,94 size=103x34 order=1 group=0eeff9d407d3 line=e5dd6bd49c2a",
  "topic 19": "pos=519,65.5 size=69x34 order=0 group=17e23937cd53 line=85eed995cfb5",
  "topic 2": "pos=375.5,-535.5 size=256x93 order=0 group=44e602184c4e line=3e93580dbced",
  "topic 20": "pos=536.5,116 size=104x47 order=1 group=ba928e19b6bc line=07a12b01dad8",
  "topic 21": "pos=252,201 size=69x34 order=1 group=f1cf1e9e3d69 line=290664d25139",
  "topic 22": "pos=376.5,179 size=120x59 order=0 group=451b63635ced line=aca62d332791",
  "topic 23": "pos=419.5,235.5 size=206x34 order=1 group=f766264fd2c8 line=e21b1e96e064",
  "topic 24": "pos=278,301.5 size=121x47 order=2 group=5e6052c0a781 line=cd1168174f68",
  "topic 25": "pos=411.5,279.5 size=86x34 order=0 group=ea0fa11295be line=c95cb00573fc",
  "topic 26": "pos=403,323.5 size=69x34 order=1 group=9beb06065963 line=e289e0937d23",
  "topic 27": "pos=139.5,531 size=96x38 order=4 group=6a24e8a1e33b line=9f143bb54c7a",
  "topic 28": "pos=261,418 size=87x47 order=0 group=26b89404488e line=c3fb90afe50f",
  "topic 29": "pos=369,367.5 size=69x34 order=0 group=631307dea89e line=61364c78af0c",
  "topic 3": "pos=673,-626 size=279x68 order=0 group=a9220f783ab8 line=f6150b073ecf",
  "topic 30": "pos=386,440 size=103x34 order=1 group=4e11bab20741 line=ec73dcb261d2",
  "topic 31": "pos=502,411.5 size=69x34 order=0 group=7236905baf47 line=69f6068708c0",
  "topic 32": "pos=519.5,462 size=104x47 order=1 group=323399e71063 line=6b7dee168238",
  "topic 33": "pos=396.5,559.5 size=358x59 order=1 group=aff12bf068e5 line=5d02a44c3ca6",
  "topic 34": "pos=665.5,525 size=120x59 order=0 group=aaaeb7ffae00 line=da79c3585083",
  "topic 35": "pos=680.5,594 size=150x59 order=1 group=dea3070f722c line=4a66281381f6",
  "topic 36": "pos=278,672.5 size=121x47 order=2 group=80811f5042ea line=8a0fa9745219",
  "topic 37": "pos=403,650.5 size=69x34 order=0 group=18d780dc4e8d line=5d52d00d9a67",
  "topic 38": "pos=403,694.5 size=69x34 order=1 group=328ccf3fb1fc line=1360e6e5a97f",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=1e3bd64965ec line=70c4aed10436",
  "topic 4": "pos=929,-665 size=173x93 order=0 group=4137ade6c943 line=ed6ee8aa2003",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=11ee9eba77f1 line=49944b3c3657",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=154ab3d14d67 line=38314b6e3ea7",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=9530e5c053da line=6cfd3626abce",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=8b416f4aafd0 line=01fb788ec80c",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=9d383d7153a8 line=d2a05a7f2eb1",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=5b9cf80cb28a line=afb43a18230c",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=f04a75bc946f line=0b07d4914ddd",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=b62d08999ad2 line=3668449e3976",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=174724d419b0 line=daff7500560c",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=93c28a75d091 line=6e0c3134ebcb",
  "topic 5": "pos=922,-574.5 size=159x68 order=1 group=b4aa02dcda5f line=fbe649c413b1",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=43f24786d046 line=134eaa37ff37",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=0c529ad7a026 line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=e44ebac5caa6 line=e74fa6ecbd6a",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=c8d084869e33 line=2e573057fa16",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=45435543e63a line=6b48f5c5062f",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=94763bfaa886 line=2fb7416044d7",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=c6570adee23c line=33738c2aa05b",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=ec2900dd94ff line=098ae7f1ed02",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=17da654541e5 line=4765955ad45d",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=4ccde108ccf0 line=0525849dfa31",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=c1cee68058e6 line=03765c81a874",
  "topic 6": "pos=613,-445 size=159x68 order=1 group=8cd399e543e0 line=3636855e8b10",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=7668953ab36f line=9229e4518179",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=78ae726fdeb2 line=bb3f095c8aec",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=dd55084dbcbc line=15abefdfbeea",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=cce652d2063f line=f42fe57e407c",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=aa8969910fc6 line=7210f9f81508",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=ad2eb59e0c9c line=1523987e8fd0",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=fae8ba494cad line=ae018dce30d9",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=fc3925a399bb line=8376ceb320ca",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=9fac7942c4dc line=720c7cc8e055",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=6839744f56d1 line=aec3ebce9132",
  "topic 7": "pos=785.5,-496.5 size=126x68 order=0 group=a89129a1e222 line=ef59fb74b443",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=0f98f44eae36 line=4ec8896bfea8",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=c50c9c7ae779 line=dd9bc23b3722",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=e0b1be85d3fd line=6128117fb497",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=e57b6e06d5a3 line=9e1561edd5ef",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=68847c5d4835 line=e9902f21cdac",
  "topic 8": "pos=825.5,-406 size=206x93 order=1 group=668105265168 line=88c3a3ea4842",
  "topic 9": "pos=327,-255.5 size=159x125 order=1 group=519edc9bc8c9 line=e781e88ee41c",
}
`;

exports[`redraw render snapshot of a medium map renders the same after style, feature and image changes: styled 1`] = `
{
  "canvas": "94a4cd83d520",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=52b253bec858 line=da39a3ee5e6b",
  "topic 1": "pos=154.5,-358.5 size=126x68 order=0 group=1ac3b65cf5c6 line=ea72607da671",
  "topic 10": "pos=572.5,-315.5 size=272x68 order=0 group=693fe63f3fc0 line=44d42bcc4659",
  "topic 11": "pos=496.5,-216.5 size=120x110 order=1 group=3acfeb3bcd5a line=b3960e9d7a25",
  "topic 12": "pos=350.5,-78.5 size=206x93 order=2 group=89a8abe9f80b line=b8917e307fb8",
  "topic 13": "pos=688,-117.5 size=409x68 order=0 group=8a5ea054c02a line=a69221b4ccb3",
  "topic 14": "pos=552,-39.5 size=137x68 order=1 group=345730d28ddb line=53ce5d0d1fef",
  "topic 15": "pos=139.5,172.5 size=96x74 order=2 group=7f161ae1a5ac line=bb9f58af2cd7",
  "topic 16": "pos=269.5,72 size=104x47 order=0 group=ea3774a5ed00 line=31abf6adfadc",
  "topic 17": "pos=386,21.5 size=69x34 order=0 group=0c3ad15369c5 line=439de8e0d329",
  "topic 18": "pos=403,94 size=103x34 order=1 group=38a8aef5bb53 line=04caab8fa80e",
  "topic 19": "pos=519,65.5 size=69x34 order=0 group=1fdf7f040bfc line=a0bc28fc9c42",
  "topic 2": "pos=375.5,-535.5 size=256x93 order=0 group=b434a86ef704 line=53be925adf6c",
  "topic 20": "pos=536.5,116 size=104x47 order=1 group=8481c198909a line=ec2af31d615c",
  "topic 21": "pos=252,201 size=69x34 order=1 group=f9f01496755a line=7470126bcd4a",
  "topic 22": "pos=376.5,179 size=120x59 order=0 group=e807b6d7c597 line=0275717883ba",
  "topic 23": "pos=419.5,235.5 size=206x34 order=1 group=dcc9b6c670b9 line=5bc57a636001",
  "topic 24": "pos=278,301.5 size=121x47 order=2 group=c8fec8c1f2cb line=e43c8256d7e6",
  "topic 25": "pos=411.5,279.5 size=86x34 order=0 group=bf47454585ac line=120e1b3a44ff",
  "topic 26": "pos=403,323.5 size=69x34 order=1 group=499e0e810c79 line=a3b016708bac",
  "topic 27": "pos=139.5,531 size=96x38 order=4 group=0c3af57d9d12 line=5b2728d76718",
  "topic 28": "pos=261,418 size=87x47 order=0 group=9fcaed8a5db9 line=0705f95fceab",
  "topic 29": "pos=369,367.5 size=69x34 order=0 group=11df550663d0 line=1933b7aa020e",
  "topic 3": "pos=673,-626 size=279x68 order=0 group=a77ec65be75e line=fe87412078b3",
  "topic 30": "pos=386,440 size=103x34 order=1 group=be1e636f6526 line=98389a5de5f2",
  "topic 31": "pos=502,411.5 size=69x34 order=0 group=1aa852fda760 line=435e37030870",
  "topic 32": "pos=519.5,462 size=104x47 order=1 group=690676bcb884 line=85fbf20f9704",
  "topic 33": "pos=396.5,559.5 size=358x59 order=1 group=e99055bdff01 line=af9aa6494024",
  "topic 34": "pos=665.5,525 size=120x59 order=0 group=c170f9956caf line=35b3b7362a50",
  "topic 35": "pos=680.5,594 size=150x59 order=1 group=077c648ec9b4 line=ce666120d8e7",
  "topic 36": "pos=278,672.5 size=121x47 order=2 group=052b71b7c23a line=f279df030683",
  "topic 37": "pos=403,650.5 size=69x34 order=0 group=f451310aa44d line=7df17c9d7a36",
  "topic 38": "pos=403,694.5 size=69x34 order=1 group=5d9a49e06b22 line=cf9ae6eb707e",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=b5f47e8ffe6a line=45ba77b9737c",
  "topic 4": "pos=929,-665 size=173x93 order=0 group=ef6c89182b75 line=d1c2e2b7dcfe",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=dade6122c865 line=0ccc63e2c7dc",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=d6b24948b3e1 line=05f1dcbbda4d",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=22ff3e2ff78e line=653fa4771554",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=a37001cdd864 line=f76dfd7a4292",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=b75329eb8c79 line=3523393064d4",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=75863fd2ad68 line=191987e795ae",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=dc526c2eaba1 line=3f2b03aab15f",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=9d4afbee4d31 line=0678529c2fe8",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=7f64c6f662c8 line=3adedc430c7d",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=dd7043e9a2a0 line=0310ad146aa2",
  "topic 5": "pos=922,-574.5 size=159x68 order=1 group=c829ed824f6a line=ecb71c5eec4a",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=7ed211b7bba8 line=bd728387fd89",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=0c529ad7a026 line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=b8103cfdb2c7 line=d7362681835b",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=2a889a325772 line=f7e49923978c",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=7940786d8ad4 line=14dfd50bb3b0",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=3d21fadc7150 line=8d24bbd5a823",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=6204d9b6b628 line=bcf978b99bf5",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=940c2f6ea7fe line=de9eeca9ab1e",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=d7c97978ca52 line=d54bfe9687c3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=53822b7b4a2e line=62f84db9acb3",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=f7135261c7d8 line=d1b34dc5e4ad",
  "topic 6": "pos=613,-445 size=159x68 order=1 group=aacd794b6f2e line=c8afcc84d5c9",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=768e89a5044b line=16ab3beb3c16",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=4147cee0e7c5 line=859c81c1cd05",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=ebb7f98b2877 line=f9f71dd8fe5b",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=dbf1279423a3 line=8761c60f26b6",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=d063113eaf0a line=37ede42beae8",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=5a84fdabefb9 line=f2b6e580e209",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=537c8f6a1b3f line=2283c269a934",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=b53d617f4d05 line=f84e6f8bc1ae",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=cbb9131d01af line=1882af4c714e",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=d5dc37826783 line=e926bbc52454",
  "topic 7": "pos=785.5,-496.5 size=126x68 order=0 group=068b6bbe7194 line=d94e5668a077",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=7cba076e9d2a line=3d0050f48def",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=c038bc53b31c line=7326c1f7aae2",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=adef3177b93a line=35a24638b9da",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=421fac015705 line=174629ac4be6",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=475d677d98eb line=83694791f45f",
  "topic 8": "pos=825.5,-406 size=206x93 order=1 group=4526fb2ec386 line=9ef77734fbf4",
  "topic 9": "pos=327,-255.5 size=159x125 order=1 group=ef4fd2081859 line=7b7dc20b5f03",
}
`;

exports[`redraw render snapshot of a medium map renders the same after switching to the tree layout and back: mindmap 1`] = `
{
  "canvas": "007e7de2ed67",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=52b253bec858 line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=7d6db44d84b8 line=14465d00ae9e",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=f29f9e8bd3f5 line=ca9c29b657b7",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=b48fecefbf72 line=9f1a5678f79b",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=a9cd6a98313d line=3e2ab23edb2e",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=f1e7593b3972 line=d1b8ffed00d3",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=af61cab1fc75 line=758c5d149d80",
  "topic 15": "pos=139.5,16 size=96x74 order=2 group=3e0bde6774c4 line=03a6e6620db5",
  "topic 16": "pos=269.5,-84.5 size=104x47 order=0 group=ce820890c6d6 line=767619b58311",
  "topic 17": "pos=386,-135 size=69x34 order=0 group=e269afba132e line=4d78b932a742",
  "topic 18": "pos=403,-62.5 size=103x34 order=1 group=33921f6b60d3 line=d06662285efa",
  "topic 19": "pos=519,-91 size=69x34 order=0 group=be73b9e998d7 line=72c7d3c8dbe0",
  "topic 2": "pos=224,-459 size=63x34 order=0 group=212d3cf1a27f line=4f503fe43297",
  "topic 20": "pos=536.5,-40.5 size=104x47 order=1 group=63a78af149df line=d92efb5af4d9",
  "topic 21": "pos=252,44.5 size=69x34 order=1 group=70e8d8eed79c line=2bc9e5eead1f",
  "topic 22": "pos=376.5,22.5 size=120x59 order=0 group=d5fd04f6407f line=5039215cfb15",
  "topic 23": "pos=419.5,79 size=206x34 order=1 group=eed3b7793aab line=c830aad267ad",
  "topic 24": "pos=278,145 size=121x47 order=2 group=9285becc276a line=2cccfdf38c89",
  "topic 25": "pos=411.5,123 size=86x34 order=0 group=a0218ef0108e line=4123f38c7cc2",
  "topic 26": "pos=403,167 size=69x34 order=1 group=f002f90a776b line=24831b6a81e5",
  "topic 27": "pos=139.5,374.5 size=96x38 order=4 group=daf95be1b2ae line=30959b29cc2d",
  "topic 28": "pos=261,261.5 size=87x47 order=0 group=b665ea39f57c line=8468daa7ec17",
  "topic 29": "pos=369,211 size=69x34 order=0 group=07cc70428bf1 line=5589d89e9146",
  "topic 3": "pos=385.5,-509.5 size=200x34 order=0 group=1e7b61668148 line=ee43cfc7eb24",
  "topic 30": "pos=386,283.5 size=103x34 order=1 group=7280f016d23c line=55a1f0a76e37",
  "topic 31": "pos=502,255 size=69x34 order=0 group=be5c47540c60 line=685aa3535c73",
  "topic 32": "pos=519.5,305.5 size=104x47 order=1 group=7ab71f774add line=919cf05b28d7",
  "topic 33": "pos=396.5,403 size=358x59 order=1 group=c4319d95334e line=a1bee726f585",
  "topic 34": "pos=665.5,368.5 size=120x59 order=0 group=f7ac0953f06b line=85362891b03b",
  "topic 35": "pos=680.5,437.5 size=150x59 order=1 group=5b4e390077c7 line=eb24489f1833",
  "topic 36": "pos=278,516 size=121x47 order=2 group=1b426d4da416 line=b38b929a4296",
  "topic 37": "pos=403,494 size=69x34 order=0 group=7311eef57cca line=368f701524ea",
  "topic 38": "pos=403,538 size=69x34 order=1 group=16ad3772f6ef line=ce8b2d07af90",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=b5f47e8ffe6a line=45ba77b9737c",
  "topic 4": "pos=559,-531.5 size=87x47 order=0 group=0a31e3c2e08c line=c4c37fa6db29",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=dade6122c865 line=0ccc63e2c7dc",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=d6b24948b3e1 line=05f1dcbbda4d",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=22ff3e2ff78e line=653fa4771554",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=a37001cdd864 line=f76dfd7a4292",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=b75329eb8c79 line=3523393064d4",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=75863fd2ad68 line=191987e795ae",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=dc526c2eaba1 line=3f2b03aab15f",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=9d4afbee4d31 line=0678529c2fe8",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=7f64c6f662c8 line=3adedc430c7d",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=dd7043e9a2a0 line=0310ad146aa2",
  "topic 5": "pos=555.5,-481 size=80x34 order=1 group=1437c44acf80 line=379f08a83b76",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=7ed211b7bba8 line=bd728387fd89",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=0c529ad7a026 line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=b8103cfdb2c7 line=d7362681835b",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=2a889a325772 line=f7e49923978c",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=7940786d8ad4 line=14dfd50bb3b0",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=3d21fadc7150 line=8d24bbd5a823",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=6204d9b6b628 line=bcf978b99bf5",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=940c2f6ea7fe line=de9eeca9ab1e",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=d7c97978ca52 line=d54bfe9687c3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=53822b7b4a2e line=62f84db9acb3",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=f7135261c7d8 line=d1b34dc5e4ad",
  "topic 6": "pos=325.5,-408.5 size=80x34 order=1 group=6de4bb4d5db7 line=0b91bee6ed96",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=768e89a5044b line=16ab3beb3c16",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=4147cee0e7c5 line=859c81c1cd05",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=ebb7f98b2877 line=f9f71dd8fe5b",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=dbf1279423a3 line=8761c60f26b6",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=d063113eaf0a line=37ede42beae8",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=5a84fdabefb9 line=f2b6e580e209",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=537c8f6a1b3f line=2283c269a934",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=b53d617f4d05 line=f84e6f8bc1ae",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=cbb9131d01af line=1882af4c714e",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=d5dc37826783 line=e926bbc52454",
  "topic 7": "pos=427,-437 size=63x34 order=0 group=2cf6fefb8392 line=1de3ff0b54b2",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=7cba076e9d2a line=3d0050f48def",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=c038bc53b31c line=7326c1f7aae2",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=adef3177b93a line=35a24638b9da",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=421fac015705 line=174629ac4be6",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=475d677d98eb line=83694791f45f",
  "topic 8": "pos=447.5,-386.5 size=104x47 order=1 group=a9a4d46ff90d line=52fab0052e24",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=a47637fd0ca2 line=5de042427663",
}
`;

exports[`redraw render snapshot of a medium map renders the same after switching to the tree layout and back: tree 1`] = `
{
  "canvas": "321df3f80096",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=52b253bec858 line=da39a3ee5e6b",
  "topic 1": "pos=-2021.5,110 size=71x38 order=0 group=c8965b611656 line=b387428a7c74",
  "topic 10": "pos=-2035.5,350 size=86x34 order=0 group=308c0dc98359 line=7248c51e0a08",
  "topic 11": "pos=-1922.5,362.5 size=120x59 order=1 group=c14139f3b093 line=764e35d62f5a",
  "topic 12": "pos=-1710,222.5 size=104x47 order=2 group=73085072ba33 line=5fc3eb1dc329",
  "topic 13": "pos=-1749.5,333 size=206x34 order=0 group=edcd5dc4189b line=6c57a7e5859d",
  "topic 14": "pos=-1602,333 size=69x34 order=1 group=b3bfab4932b7 line=f1edcd7737c3",
  "topic 15": "pos=-1166,128 size=96x74 order=1 group=85a314a7e556 line=0aec9ae5f5be",
  "topic 16": "pos=-1426.5,258.5 size=104x47 order=0 group=7634cff453c9 line=de0967e03c0e",
  "topic 17": "pos=-1523,369 size=69x34 order=0 group=0b917fd0efee line=7bad59f6aae4",
  "topic 18": "pos=-1387,369 size=103x34 order=1 group=da38bcd9b8f3 line=3edb062e9c05",
  "topic 19": "pos=-1444,473 size=69x34 order=0 group=871b320e23b2 line=c0188ea49fe3",
  "topic 2": "pos=-2282,216 size=63x34 order=0 group=d7c9b0f859ed line=ab3082c12c48",
  "topic 20": "pos=-1347.5,479.5 size=104x47 order=1 group=61ddab8d24f5 line=976cb7685ffa",
  "topic 21": "pos=-1117.5,252 size=69x34 order=1 group=b058c9731a8a line=6c647af8d598",
  "topic 22": "pos=-1225.5,368.5 size=120x59 order=0 group=13f6e1e0d687 line=87ff9f3f946e",
  "topic 23": "pos=-1052.5,356 size=206x34 order=1 group=320e9ebcde0b line=e7d44b058435",
  "topic 24": "pos=-857,258.5 size=121x47 order=2 group=18ff9ceea912 line=2ad38053367e",
  "topic 25": "pos=-896.5,369 size=86x34 order=0 group=f2a18c10ac48 line=1d8a896fc03c",
  "topic 26": "pos=-809,369 size=69x34 order=1 group=54fef4317147 line=308806477de6",
  "topic 27": "pos=-370.5,110 size=96x38 order=2 group=416b1e74e7f1 line=ade0b69cf801",
  "topic 28": "pos=-633.5,222.5 size=87x47 order=0 group=237accd1afb3 line=5bc6970221a6",
  "topic 29": "pos=-730,333 size=69x34 order=0 group=f96f49958290 line=ca3880112f36",
  "topic 3": "pos=-2375.5,320 size=200x34 order=0 group=b4cabf7fff68 line=806a013ea535",
  "topic 30": "pos=-594,333 size=103x34 order=1 group=e2024375e40a line=baea5bed6d7a",
  "topic 31": "pos=-651,437 size=69x34 order=0 group=b12f238cc550 line=5a656919e0f8",
  "topic 32": "pos=-554.5,443.5 size=104x47 order=1 group=1aeeb7fdd866 line=282876f31ac3",
  "topic 33": "pos=-313.5,228.5 size=358x59 order=1 group=df3ee5f767ad line=1f6ff2d0d5ec",
  "topic 34": "pos=-393.5,357.5 size=120x59 order=0 group=903f0ad21e90 line=57833c7f141a",
  "topic 35": "pos=-248.5,357.5 size=150x59 order=1 group=35dacbf557fa line=4e7fc4fa6dfd",
  "topic 36": "pos=-50.5,222.5 size=121x47 order=2 group=69f10abfdc50 line=e1f2a9e96974",
  "topic 37": "pos=-90,333 size=69x34 order=0 group=1dcaf73e436c line=f1a6f029fb03",
  "topic 38": "pos=-11,333 size=69x34 order=1 group=13525fd87c2d line=85f728c61a17",
  "topic 39": "pos=423,110 size=78x38 order=3 group=972e72729db6 line=26331795a9d1",
  "topic 4": "pos=-2420.5,430.5 size=87x47 order=0 group=a8579ed4dee4 line=3afb326c4a6f",
  "topic 40": "pos=256.5,222.5 size=121x47 order=0 group=497692d84c3f line=00ac6c92d4b9",
  "topic 41": "pos=68,333 size=69x34 order=0 group=cceaa3b05be2 line=5ee9e855b742",
  "topic 42": "pos=296,333 size=86x34 order=1 group=434280b48f6d line=c59b4b7d4136",
  "topic 43": "pos=215.5,437 size=206x34 order=0 group=b51088ccb763 line=53e0734b0b83",
  "topic 44": "pos=404,461 size=151x82 order=1 group=d044493760ae line=2a7b008f96a5",
  "topic 45": "pos=563.5,216 size=103x34 order=1 group=e79deb94dbb4 line=fe25863e0524",
  "topic 46": "pos=524,320 size=69x34 order=0 group=b991bd99d747 line=209b9550794e",
  "topic 47": "pos=603,320 size=69x34 order=1 group=966c18e83a31 line=5c328592aed1",
  "topic 48": "pos=730,222.5 size=121x47 order=2 group=f6904659ec3b line=507c3047fd3e",
  "topic 49": "pos=682,333 size=69x34 order=0 group=c34dd7831ad6 line=b7ecc60d31b0",
  "topic 5": "pos=-2327,424 size=80x34 order=1 group=4aa4a87c6fb0 line=b0da76464c0d",
  "topic 50": "pos=769.5,333 size=86x34 order=1 group=fca81a509974 line=65299b2e1c4a",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=0c529ad7a026 line=da39a3ee5e6b",
  "topic 51": "pos=1220.5,110 size=78x38 order=4 group=e3b50579a97c line=a7bd107c4c7a",
  "topic 52": "pos=1062.5,222.5 size=87x47 order=0 group=c82cd6075899 line=9d6d0ec09407",
  "topic 53": "pos=925.5,333 size=206x34 order=0 group=f31de29ec9ac line=2bc1e296b7a5",
  "topic 54": "pos=1170.5,333 size=103x34 order=1 group=669ac309f112 line=13d299ef7fcd",
  "topic 55": "pos=1113.5,449.5 size=150x59 order=0 group=6564cef18940 line=ecd29eb2e247",
  "topic 56": "pos=1250.5,443.5 size=104x47 order=1 group=a2d8b9030b8b line=fa5542e8509e",
  "topic 57": "pos=1386.5,216 size=69x34 order=1 group=15f5eabd232d line=e32da11e415d",
  "topic 58": "pos=1347,320 size=69x34 order=0 group=e32cf12a12fd line=7136a715cda9",
  "topic 59": "pos=1426,320 size=69x34 order=1 group=c3e189740c3c line=0aa4c620aad0",
  "topic 6": "pos=-2177,320 size=80x34 order=1 group=68f342dcdbd4 line=d5034738f9d1",
  "topic 60": "pos=1544.5,222.5 size=121x47 order=2 group=13460657f829 line=1a5792fa1be1",
  "topic 61": "pos=1505,333 size=69x34 order=0 group=708d4e5eb58b line=24cd8210ac14",
  "topic 62": "pos=1584,333 size=69x34 order=1 group=27b9fd6fa93c line=e884ffd5cac8",
  "topic 63": "pos=2052,110 size=249x38 order=5 group=a68132b0df22 line=068456021605",
  "topic 64": "pos=1817,222.5 size=104x47 order=0 group=1494d63718d0 line=04445ce5c0a1",
  "topic 65": "pos=1671.5,333 size=86x34 order=0 group=16ab7196caeb line=c68b6a09b98a",
  "topic 66": "pos=1865,345.5 size=150x59 order=1 group=a9edc9a66405 line=833190f65104",
  "topic 67": "pos=1784.5,474.5 size=120x59 order=0 group=914eaaae9f9f line=ce54b95cf48d",
  "topic 68": "pos=1930,486 size=151x82 order=1 group=cb6b6ce2ff58 line=94737728c834",
  "topic 69": "pos=2098,216 size=69x34 order=1 group=d0afa8501802 line=86d13f0d8eb3",
  "topic 7": "pos=-2234,424 size=63x34 order=0 group=885397950815 line=682e073921a1",
  "topic 70": "pos=2058.5,320 size=86x34 order=0 group=8384b8060944 line=82011f3fe755",
  "topic 71": "pos=2146,320 size=69x34 order=1 group=7047869c6527 line=123a0872e21d",
  "topic 72": "pos=2333,222.5 size=138x47 order=2 group=efa5a068faec line=bb70d20a63cb",
  "topic 73": "pos=2293.5,333 size=206x34 order=0 group=9984191e753a line=5bf2c2889236",
  "topic 74": "pos=2441,333 size=69x34 order=1 group=afd1b0ea2dc4 line=fdcf1b9143a6",
  "topic 8": "pos=-2140.5,430.5 size=104x47 order=1 group=80082ef7a449 line=35423a6cdb58",
  "topic 9": "pos=-1970.5,231 size=80x64 order=1 group=bad30b491a62 line=a5c93956d121",
}
`;

exports[`redraw render snapshot of a medium map renders the same after toggling the theme variant: dark 1`] = `
{
  "canvas": "ae2e6cc94a9e",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=52b253bec858 line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=7d6db44d84b8 line=14465d00ae9e",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=f29f9e8bd3f5 line=ca9c29b657b7",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=b48fecefbf72 line=9f1a5678f79b",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=a9cd6a98313d line=3e2ab23edb2e",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=f1e7593b3972 line=d1b8ffed00d3",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=af61cab1fc75 line=758c5d149d80",
  "topic 15": "pos=139.5,16 size=96x74 order=2 group=3e0bde6774c4 line=03a6e6620db5",
  "topic 16": "pos=269.5,-84.5 size=104x47 order=0 group=ce820890c6d6 line=767619b58311",
  "topic 17": "pos=386,-135 size=69x34 order=0 group=e269afba132e line=4d78b932a742",
  "topic 18": "pos=403,-62.5 size=103x34 order=1 group=33921f6b60d3 line=d06662285efa",
  "topic 19": "pos=519,-91 size=69x34 order=0 group=be73b9e998d7 line=72c7d3c8dbe0",
  "topic 2": "pos=224,-459 size=63x34 order=0 group=212d3cf1a27f line=4f503fe43297",
  "topic 20": "pos=536.5,-40.5 size=104x47 order=1 group=63a78af149df line=d92efb5af4d9",
  "topic 21": "pos=252,44.5 size=69x34 order=1 group=70e8d8eed79c line=2bc9e5eead1f",
  "topic 22": "pos=376.5,22.5 size=120x59 order=0 group=d5fd04f6407f line=5039215cfb15",
  "topic 23": "pos=419.5,79 size=206x34 order=1 group=eed3b7793aab line=c830aad267ad",
  "topic 24": "pos=278,145 size=121x47 order=2 group=9285becc276a line=2cccfdf38c89",
  "topic 25": "pos=411.5,123 size=86x34 order=0 group=a0218ef0108e line=4123f38c7cc2",
  "topic 26": "pos=403,167 size=69x34 order=1 group=f002f90a776b line=24831b6a81e5",
  "topic 27": "pos=139.5,374.5 size=96x38 order=4 group=daf95be1b2ae line=30959b29cc2d",
  "topic 28": "pos=261,261.5 size=87x47 order=0 group=b665ea39f57c line=8468daa7ec17",
  "topic 29": "pos=369,211 size=69x34 order=0 group=07cc70428bf1 line=5589d89e9146",
  "topic 3": "pos=385.5,-509.5 size=200x34 order=0 group=1e7b61668148 line=ee43cfc7eb24",
  "topic 30": "pos=386,283.5 size=103x34 order=1 group=7280f016d23c line=55a1f0a76e37",
  "topic 31": "pos=502,255 size=69x34 order=0 group=be5c47540c60 line=685aa3535c73",
  "topic 32": "pos=519.5,305.5 size=104x47 order=1 group=7ab71f774add line=919cf05b28d7",
  "topic 33": "pos=396.5,403 size=358x59 order=1 group=c4319d95334e line=a1bee726f585",
  "topic 34": "pos=665.5,368.5 size=120x59 order=0 group=f7ac0953f06b line=85362891b03b",
  "topic 35": "pos=680.5,437.5 size=150x59 order=1 group=5b4e390077c7 line=eb24489f1833",
  "topic 36": "pos=278,516 size=121x47 order=2 group=1b426d4da416 line=b38b929a4296",
  "topic 37": "pos=403,494 size=69x34 order=0 group=7311eef57cca line=368f701524ea",
  "topic 38": "pos=403,538 size=69x34 order=1 group=16ad3772f6ef line=ce8b2d07af90",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=b5f47e8ffe6a line=45ba77b9737c",
  "topic 4": "pos=559,-531.5 size=87x47 order=0 group=0a31e3c2e08c line=c4c37fa6db29",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=dade6122c865 line=0ccc63e2c7dc",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=d6b24948b3e1 line=05f1dcbbda4d",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=22ff3e2ff78e line=653fa4771554",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=a37001cdd864 line=f76dfd7a4292",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=b75329eb8c79 line=3523393064d4",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=75863fd2ad68 line=191987e795ae",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=dc526c2eaba1 line=3f2b03aab15f",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=9d4afbee4d31 line=0678529c2fe8",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=7f64c6f662c8 line=3adedc430c7d",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=dd7043e9a2a0 line=0310ad146aa2",
  "topic 5": "pos=555.5,-481 size=80x34 order=1 group=1437c44acf80 line=379f08a83b76",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=7ed211b7bba8 line=bd728387fd89",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=0c529ad7a026 line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=b8103cfdb2c7 line=d7362681835b",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=2a889a325772 line=f7e49923978c",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=7940786d8ad4 line=14dfd50bb3b0",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=3d21fadc7150 line=8d24bbd5a823",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=6204d9b6b628 line=bcf978b99bf5",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=940c2f6ea7fe line=de9eeca9ab1e",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=d7c97978ca52 line=d54bfe9687c3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=53822b7b4a2e line=62f84db9acb3",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=f7135261c7d8 line=d1b34dc5e4ad",
  "topic 6": "pos=325.5,-408.5 size=80x34 order=1 group=6de4bb4d5db7 line=0b91bee6ed96",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=768e89a5044b line=16ab3beb3c16",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=4147cee0e7c5 line=859c81c1cd05",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=ebb7f98b2877 line=f9f71dd8fe5b",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=dbf1279423a3 line=8761c60f26b6",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=d063113eaf0a line=37ede42beae8",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=5a84fdabefb9 line=f2b6e580e209",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=537c8f6a1b3f line=2283c269a934",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=b53d617f4d05 line=f84e6f8bc1ae",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=cbb9131d01af line=1882af4c714e",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=d5dc37826783 line=e926bbc52454",
  "topic 7": "pos=427,-437 size=63x34 order=0 group=2cf6fefb8392 line=1de3ff0b54b2",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=7cba076e9d2a line=3d0050f48def",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=c038bc53b31c line=7326c1f7aae2",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=adef3177b93a line=35a24638b9da",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=421fac015705 line=174629ac4be6",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=475d677d98eb line=83694791f45f",
  "topic 8": "pos=447.5,-386.5 size=104x47 order=1 group=a9a4d46ff90d line=52fab0052e24",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=a47637fd0ca2 line=5de042427663",
}
`;

exports[`redraw render snapshot of a medium map renders the same after toggling the theme variant: initialized dark 1`] = `
{
  "canvas": "ae2e6cc94a9e",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=52b253bec858 line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=7d6db44d84b8 line=14465d00ae9e",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=f29f9e8bd3f5 line=ca9c29b657b7",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=b48fecefbf72 line=9f1a5678f79b",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=a9cd6a98313d line=3e2ab23edb2e",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=f1e7593b3972 line=d1b8ffed00d3",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=af61cab1fc75 line=758c5d149d80",
  "topic 15": "pos=139.5,16 size=96x74 order=2 group=3e0bde6774c4 line=03a6e6620db5",
  "topic 16": "pos=269.5,-84.5 size=104x47 order=0 group=ce820890c6d6 line=767619b58311",
  "topic 17": "pos=386,-135 size=69x34 order=0 group=e269afba132e line=4d78b932a742",
  "topic 18": "pos=403,-62.5 size=103x34 order=1 group=33921f6b60d3 line=d06662285efa",
  "topic 19": "pos=519,-91 size=69x34 order=0 group=be73b9e998d7 line=72c7d3c8dbe0",
  "topic 2": "pos=224,-459 size=63x34 order=0 group=212d3cf1a27f line=4f503fe43297",
  "topic 20": "pos=536.5,-40.5 size=104x47 order=1 group=63a78af149df line=d92efb5af4d9",
  "topic 21": "pos=252,44.5 size=69x34 order=1 group=70e8d8eed79c line=2bc9e5eead1f",
  "topic 22": "pos=376.5,22.5 size=120x59 order=0 group=d5fd04f6407f line=5039215cfb15",
  "topic 23": "pos=419.5,79 size=206x34 order=1 group=eed3b7793aab line=c830aad267ad",
  "topic 24": "pos=278,145 size=121x47 order=2 group=9285becc276a line=2cccfdf38c89",
  "topic 25": "pos=411.5,123 size=86x34 order=0 group=a0218ef0108e line=4123f38c7cc2",
  "topic 26": "pos=403,167 size=69x34 order=1 group=f002f90a776b line=24831b6a81e5",
  "topic 27": "pos=139.5,374.5 size=96x38 order=4 group=daf95be1b2ae line=30959b29cc2d",
  "topic 28": "pos=261,261.5 size=87x47 order=0 group=b665ea39f57c line=8468daa7ec17",
  "topic 29": "pos=369,211 size=69x34 order=0 group=07cc70428bf1 line=5589d89e9146",
  "topic 3": "pos=385.5,-509.5 size=200x34 order=0 group=1e7b61668148 line=ee43cfc7eb24",
  "topic 30": "pos=386,283.5 size=103x34 order=1 group=7280f016d23c line=55a1f0a76e37",
  "topic 31": "pos=502,255 size=69x34 order=0 group=be5c47540c60 line=685aa3535c73",
  "topic 32": "pos=519.5,305.5 size=104x47 order=1 group=7ab71f774add line=919cf05b28d7",
  "topic 33": "pos=396.5,403 size=358x59 order=1 group=c4319d95334e line=a1bee726f585",
  "topic 34": "pos=665.5,368.5 size=120x59 order=0 group=f7ac0953f06b line=85362891b03b",
  "topic 35": "pos=680.5,437.5 size=150x59 order=1 group=5b4e390077c7 line=eb24489f1833",
  "topic 36": "pos=278,516 size=121x47 order=2 group=1b426d4da416 line=b38b929a4296",
  "topic 37": "pos=403,494 size=69x34 order=0 group=7311eef57cca line=368f701524ea",
  "topic 38": "pos=403,538 size=69x34 order=1 group=16ad3772f6ef line=ce8b2d07af90",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=b5f47e8ffe6a line=45ba77b9737c",
  "topic 4": "pos=559,-531.5 size=87x47 order=0 group=0a31e3c2e08c line=c4c37fa6db29",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=dade6122c865 line=0ccc63e2c7dc",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=d6b24948b3e1 line=05f1dcbbda4d",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=22ff3e2ff78e line=653fa4771554",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=a37001cdd864 line=f76dfd7a4292",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=b75329eb8c79 line=3523393064d4",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=75863fd2ad68 line=191987e795ae",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=dc526c2eaba1 line=3f2b03aab15f",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=9d4afbee4d31 line=0678529c2fe8",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=7f64c6f662c8 line=3adedc430c7d",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=dd7043e9a2a0 line=0310ad146aa2",
  "topic 5": "pos=555.5,-481 size=80x34 order=1 group=1437c44acf80 line=379f08a83b76",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=7ed211b7bba8 line=bd728387fd89",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=0c529ad7a026 line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=b8103cfdb2c7 line=d7362681835b",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=2a889a325772 line=f7e49923978c",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=7940786d8ad4 line=14dfd50bb3b0",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=3d21fadc7150 line=8d24bbd5a823",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=6204d9b6b628 line=bcf978b99bf5",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=940c2f6ea7fe line=de9eeca9ab1e",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=d7c97978ca52 line=d54bfe9687c3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=53822b7b4a2e line=62f84db9acb3",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=f7135261c7d8 line=d1b34dc5e4ad",
  "topic 6": "pos=325.5,-408.5 size=80x34 order=1 group=6de4bb4d5db7 line=0b91bee6ed96",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=768e89a5044b line=16ab3beb3c16",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=4147cee0e7c5 line=859c81c1cd05",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=ebb7f98b2877 line=f9f71dd8fe5b",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=dbf1279423a3 line=8761c60f26b6",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=d063113eaf0a line=37ede42beae8",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=5a84fdabefb9 line=f2b6e580e209",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=537c8f6a1b3f line=2283c269a934",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=b53d617f4d05 line=f84e6f8bc1ae",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=cbb9131d01af line=1882af4c714e",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=d5dc37826783 line=e926bbc52454",
  "topic 7": "pos=427,-437 size=63x34 order=0 group=2cf6fefb8392 line=1de3ff0b54b2",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=7cba076e9d2a line=3d0050f48def",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=c038bc53b31c line=7326c1f7aae2",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=adef3177b93a line=35a24638b9da",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=421fac015705 line=174629ac4be6",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=475d677d98eb line=83694791f45f",
  "topic 8": "pos=447.5,-386.5 size=104x47 order=1 group=a9a4d46ff90d line=52fab0052e24",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=a47637fd0ca2 line=5de042427663",
}
`;

exports[`redraw render snapshot of a medium map renders the same after toggling the theme variant: light 1`] = `
{
  "canvas": "ae2e6cc94a9e",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=52b253bec858 line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=7d6db44d84b8 line=14465d00ae9e",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=f29f9e8bd3f5 line=ca9c29b657b7",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=b48fecefbf72 line=9f1a5678f79b",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=a9cd6a98313d line=3e2ab23edb2e",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=f1e7593b3972 line=d1b8ffed00d3",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=af61cab1fc75 line=758c5d149d80",
  "topic 15": "pos=139.5,16 size=96x74 order=2 group=3e0bde6774c4 line=03a6e6620db5",
  "topic 16": "pos=269.5,-84.5 size=104x47 order=0 group=ce820890c6d6 line=767619b58311",
  "topic 17": "pos=386,-135 size=69x34 order=0 group=e269afba132e line=4d78b932a742",
  "topic 18": "pos=403,-62.5 size=103x34 order=1 group=33921f6b60d3 line=d06662285efa",
  "topic 19": "pos=519,-91 size=69x34 order=0 group=be73b9e998d7 line=72c7d3c8dbe0",
  "topic 2": "pos=224,-459 size=63x34 order=0 group=212d3cf1a27f line=4f503fe43297",
  "topic 20": "pos=536.5,-40.5 size=104x47 order=1 group=63a78af149df line=d92efb5af4d9",
  "topic 21": "pos=252,44.5 size=69x34 order=1 group=70e8d8eed79c line=2bc9e5eead1f",
  "topic 22": "pos=376.5,22.5 size=120x59 order=0 group=d5fd04f6407f line=5039215cfb15",
  "topic 23": "pos=419.5,79 size=206x34 order=1 group=eed3b7793aab line=c830aad267ad",
  "topic 24": "pos=278,145 size=121x47 order=2 group=9285becc276a line=2cccfdf38c89",
  "topic 25": "pos=411.5,123 size=86x34 order=0 group=a0218ef0108e line=4123f38c7cc2",
  "topic 26": "pos=403,167 size=69x34 order=1 group=f002f90a776b line=24831b6a81e5",
  "topic 27": "pos=139.5,374.5 size=96x38 order=4 group=daf95be1b2ae line=30959b29cc2d",
  "topic 28": "pos=261,261.5 size=87x47 order=0 group=b665ea39f57c line=8468daa7ec17",
  "topic 29": "pos=369,211 size=69x34 order=0 group=07cc70428bf1 line=5589d89e9146",
  "topic 3": "pos=385.5,-509.5 size=200x34 order=0 group=1e7b61668148 line=ee43cfc7eb24",
  "topic 30": "pos=386,283.5 size=103x34 order=1 group=7280f016d23c line=55a1f0a76e37",
  "topic 31": "pos=502,255 size=69x34 order=0 group=be5c47540c60 line=685aa3535c73",
  "topic 32": "pos=519.5,305.5 size=104x47 order=1 group=7ab71f774add line=919cf05b28d7",
  "topic 33": "pos=396.5,403 size=358x59 order=1 group=c4319d95334e line=a1bee726f585",
  "topic 34": "pos=665.5,368.5 size=120x59 order=0 group=f7ac0953f06b line=85362891b03b",
  "topic 35": "pos=680.5,437.5 size=150x59 order=1 group=5b4e390077c7 line=eb24489f1833",
  "topic 36": "pos=278,516 size=121x47 order=2 group=1b426d4da416 line=b38b929a4296",
  "topic 37": "pos=403,494 size=69x34 order=0 group=7311eef57cca line=368f701524ea",
  "topic 38": "pos=403,538 size=69x34 order=1 group=16ad3772f6ef line=ce8b2d07af90",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=b5f47e8ffe6a line=45ba77b9737c",
  "topic 4": "pos=559,-531.5 size=87x47 order=0 group=0a31e3c2e08c line=c4c37fa6db29",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=dade6122c865 line=0ccc63e2c7dc",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=d6b24948b3e1 line=05f1dcbbda4d",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=22ff3e2ff78e line=653fa4771554",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=a37001cdd864 line=f76dfd7a4292",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=b75329eb8c79 line=3523393064d4",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=75863fd2ad68 line=191987e795ae",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=dc526c2eaba1 line=3f2b03aab15f",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=9d4afbee4d31 line=0678529c2fe8",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=7f64c6f662c8 line=3adedc430c7d",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=dd7043e9a2a0 line=0310ad146aa2",
  "topic 5": "pos=555.5,-481 size=80x34 order=1 group=1437c44acf80 line=379f08a83b76",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=7ed211b7bba8 line=bd728387fd89",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=0c529ad7a026 line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=b8103cfdb2c7 line=d7362681835b",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=2a889a325772 line=f7e49923978c",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=7940786d8ad4 line=14dfd50bb3b0",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=3d21fadc7150 line=8d24bbd5a823",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=6204d9b6b628 line=bcf978b99bf5",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=940c2f6ea7fe line=de9eeca9ab1e",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=d7c97978ca52 line=d54bfe9687c3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=53822b7b4a2e line=62f84db9acb3",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=f7135261c7d8 line=d1b34dc5e4ad",
  "topic 6": "pos=325.5,-408.5 size=80x34 order=1 group=6de4bb4d5db7 line=0b91bee6ed96",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=768e89a5044b line=16ab3beb3c16",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=4147cee0e7c5 line=859c81c1cd05",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=ebb7f98b2877 line=f9f71dd8fe5b",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=dbf1279423a3 line=8761c60f26b6",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=d063113eaf0a line=37ede42beae8",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=5a84fdabefb9 line=f2b6e580e209",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=537c8f6a1b3f line=2283c269a934",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=b53d617f4d05 line=f84e6f8bc1ae",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=cbb9131d01af line=1882af4c714e",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=d5dc37826783 line=e926bbc52454",
  "topic 7": "pos=427,-437 size=63x34 order=0 group=2cf6fefb8392 line=1de3ff0b54b2",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=7cba076e9d2a line=3d0050f48def",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=c038bc53b31c line=7326c1f7aae2",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=adef3177b93a line=35a24638b9da",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=421fac015705 line=174629ac4be6",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=475d677d98eb line=83694791f45f",
  "topic 8": "pos=447.5,-386.5 size=104x47 order=1 group=a9a4d46ff90d line=52fab0052e24",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=a47637fd0ca2 line=5de042427663",
}
`;

exports[`redraw render snapshot of a medium map renders the same while typing in the text editor and after committing: committed 1`] = `
{
  "canvas": "fcdf2f2f09dd",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=52b253bec858 line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=7d6db44d84b8 line=14465d00ae9e",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=f29f9e8bd3f5 line=ca9c29b657b7",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=b48fecefbf72 line=9f1a5678f79b",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=a9cd6a98313d line=3e2ab23edb2e",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=f1e7593b3972 line=d1b8ffed00d3",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=af61cab1fc75 line=758c5d149d80",
  "topic 15": "pos=139.5,16 size=96x74 order=2 group=3e0bde6774c4 line=03a6e6620db5",
  "topic 16": "pos=269.5,-84.5 size=104x47 order=0 group=ce820890c6d6 line=767619b58311",
  "topic 17": "pos=386,-135 size=69x34 order=0 group=e269afba132e line=4d78b932a742",
  "topic 18": "pos=403,-62.5 size=103x34 order=1 group=33921f6b60d3 line=d06662285efa",
  "topic 19": "pos=519,-91 size=69x34 order=0 group=be73b9e998d7 line=72c7d3c8dbe0",
  "topic 2": "pos=257,-459 size=129x47 order=0 group=d0f7c0315fa8 line=b872fd9b123b",
  "topic 20": "pos=536.5,-40.5 size=104x47 order=1 group=63a78af149df line=d92efb5af4d9",
  "topic 21": "pos=252,44.5 size=69x34 order=1 group=70e8d8eed79c line=2bc9e5eead1f",
  "topic 22": "pos=376.5,22.5 size=120x59 order=0 group=d5fd04f6407f line=5039215cfb15",
  "topic 23": "pos=419.5,79 size=206x34 order=1 group=eed3b7793aab line=c830aad267ad",
  "topic 24": "pos=278,145 size=121x47 order=2 group=9285becc276a line=2cccfdf38c89",
  "topic 25": "pos=411.5,123 size=86x34 order=0 group=a0218ef0108e line=4123f38c7cc2",
  "topic 26": "pos=403,167 size=69x34 order=1 group=f002f90a776b line=24831b6a81e5",
  "topic 27": "pos=139.5,374.5 size=96x38 order=4 group=daf95be1b2ae line=30959b29cc2d",
  "topic 28": "pos=261,261.5 size=87x47 order=0 group=b665ea39f57c line=8468daa7ec17",
  "topic 29": "pos=369,211 size=69x34 order=0 group=07cc70428bf1 line=5589d89e9146",
  "topic 3": "pos=451.5,-509.5 size=200x34 order=0 group=652db35ba1d6 line=528ddc0585e1",
  "topic 30": "pos=386,283.5 size=103x34 order=1 group=7280f016d23c line=55a1f0a76e37",
  "topic 31": "pos=502,255 size=69x34 order=0 group=be5c47540c60 line=685aa3535c73",
  "topic 32": "pos=519.5,305.5 size=104x47 order=1 group=7ab71f774add line=919cf05b28d7",
  "topic 33": "pos=396.5,403 size=358x59 order=1 group=c4319d95334e line=a1bee726f585",
  "topic 34": "pos=665.5,368.5 size=120x59 order=0 group=f7ac0953f06b line=85362891b03b",
  "topic 35": "pos=680.5,437.5 size=150x59 order=1 group=5b4e390077c7 line=eb24489f1833",
  "topic 36": "pos=278,516 size=121x47 order=2 group=1b426d4da416 line=b38b929a4296",
  "topic 37": "pos=403,494 size=69x34 order=0 group=7311eef57cca line=368f701524ea",
  "topic 38": "pos=403,538 size=69x34 order=1 group=16ad3772f6ef line=ce8b2d07af90",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=b5f47e8ffe6a line=45ba77b9737c",
  "topic 4": "pos=625,-531.5 size=87x47 order=0 group=b3b86826dae0 line=702854e2b9f5",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=dade6122c865 line=0ccc63e2c7dc",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=d6b24948b3e1 line=05f1dcbbda4d",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=22ff3e2ff78e line=653fa4771554",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=a37001cdd864 line=f76dfd7a4292",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=b75329eb8c79 line=3523393064d4",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=75863fd2ad68 line=191987e795ae",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=dc526c2eaba1 line=3f2b03aab15f",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=9d4afbee4d31 line=0678529c2fe8",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=7f64c6f662c8 line=3adedc430c7d",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=dd7043e9a2a0 line=0310ad146aa2",
  "topic 5": "pos=621.5,-481 size=80x34 order=1 group=ced04af27047 line=6faca698a2d3",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=7ed211b7bba8 line=bd728387fd89",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=0c529ad7a026 line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=b8103cfdb2c7 line=d7362681835b",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=2a889a325772 line=f7e49923978c",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=7940786d8ad4 line=14dfd50bb3b0",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=3d21fadc7150 line=8d24bbd5a823",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=6204d9b6b628 line=bcf978b99bf5",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=940c2f6ea7fe line=de9eeca9ab1e",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=d7c97978ca52 line=d54bfe9687c3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=53822b7b4a2e line=62f84db9acb3",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=f7135261c7d8 line=d1b34dc5e4ad",
  "topic 6": "pos=391.5,-408.5 size=80x34 order=1 group=72eca6e574f6 line=f8a23a292792",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=768e89a5044b line=16ab3beb3c16",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=4147cee0e7c5 line=859c81c1cd05",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=ebb7f98b2877 line=f9f71dd8fe5b",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=dbf1279423a3 line=8761c60f26b6",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=d063113eaf0a line=37ede42beae8",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=5a84fdabefb9 line=f2b6e580e209",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=537c8f6a1b3f line=2283c269a934",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=b53d617f4d05 line=f84e6f8bc1ae",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=cbb9131d01af line=1882af4c714e",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=d5dc37826783 line=e926bbc52454",
  "topic 7": "pos=493,-437 size=63x34 order=0 group=bc87effc90d9 line=36449079b3be",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=7cba076e9d2a line=3d0050f48def",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=c038bc53b31c line=7326c1f7aae2",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=adef3177b93a line=35a24638b9da",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=421fac015705 line=174629ac4be6",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=475d677d98eb line=83694791f45f",
  "topic 8": "pos=513.5,-386.5 size=104x47 order=1 group=4104efa0e410 line=80ec675c725d",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=a47637fd0ca2 line=5de042427663",
}
`;

exports[`redraw render snapshot of a medium map renders the same while typing in the text editor and after committing: typing 1`] = `
{
  "canvas": "4789f9bcb30b",
  "topic 0": "pos=0,0 size=123x42 order=undefined group=52b253bec858 line=da39a3ee5e6b",
  "topic 1": "pos=127,-358.5 size=71x38 order=0 group=7d6db44d84b8 line=14465d00ae9e",
  "topic 10": "pos=345.5,-336 size=86x34 order=0 group=f29f9e8bd3f5 line=ca9c29b657b7",
  "topic 11": "pos=362.5,-279.5 size=120x59 order=1 group=b48fecefbf72 line=9f1a5678f79b",
  "topic 12": "pos=244.5,-201 size=104x47 order=2 group=a9cd6a98313d line=3e2ab23edb2e",
  "topic 13": "pos=429.5,-223 size=206x34 order=0 group=f1e7593b3972 line=d1b8ffed00d3",
  "topic 14": "pos=361,-179 size=69x34 order=1 group=af61cab1fc75 line=758c5d149d80",
  "topic 15": "pos=139.5,16 size=96x74 order=2 group=3e0bde6774c4 line=03a6e6620db5",
  "topic 16": "pos=269.5,-84.5 size=104x47 order=0 group=ce820890c6d6 line=767619b58311",
  "topic 17": "pos=386,-135 size=69x34 order=0 group=e269afba132e line=4d78b932a742",
  "topic 18": "pos=403,-62.5 size=103x34 order=1 group=33921f6b60d3 line=d06662285efa",
  "topic 19": "pos=519,-91 size=69x34 order=0 group=be73b9e998d7 line=72c7d3c8dbe0",
  "topic 2": "pos=257,-459 size=129x47 order=0 group=e7487ed0f357 line=b872fd9b123b",
  "topic 20": "pos=536.5,-40.5 size=104x47 order=1 group=63a78af149df line=d92efb5af4d9",
  "topic 21": "pos=252,44.5 size=69x34 order=1 group=70e8d8eed79c line=2bc9e5eead1f",
  "topic 22": "pos=376.5,22.5 size=120x59 order=0 group=d5fd04f6407f line=5039215cfb15",
  "topic 23": "pos=419.5,79 size=206x34 order=1 group=eed3b7793aab line=c830aad267ad",
  "topic 24": "pos=278,145 size=121x47 order=2 group=9285becc276a line=2cccfdf38c89",
  "topic 25": "pos=411.5,123 size=86x34 order=0 group=a0218ef0108e line=4123f38c7cc2",
  "topic 26": "pos=403,167 size=69x34 order=1 group=f002f90a776b line=24831b6a81e5",
  "topic 27": "pos=139.5,374.5 size=96x38 order=4 group=daf95be1b2ae line=30959b29cc2d",
  "topic 28": "pos=261,261.5 size=87x47 order=0 group=b665ea39f57c line=8468daa7ec17",
  "topic 29": "pos=369,211 size=69x34 order=0 group=07cc70428bf1 line=5589d89e9146",
  "topic 3": "pos=451.5,-509.5 size=200x34 order=0 group=652db35ba1d6 line=528ddc0585e1",
  "topic 30": "pos=386,283.5 size=103x34 order=1 group=7280f016d23c line=55a1f0a76e37",
  "topic 31": "pos=502,255 size=69x34 order=0 group=be5c47540c60 line=685aa3535c73",
  "topic 32": "pos=519.5,305.5 size=104x47 order=1 group=7ab71f774add line=919cf05b28d7",
  "topic 33": "pos=396.5,403 size=358x59 order=1 group=c4319d95334e line=a1bee726f585",
  "topic 34": "pos=665.5,368.5 size=120x59 order=0 group=f7ac0953f06b line=85362891b03b",
  "topic 35": "pos=680.5,437.5 size=150x59 order=1 group=5b4e390077c7 line=eb24489f1833",
  "topic 36": "pos=278,516 size=121x47 order=2 group=1b426d4da416 line=b38b929a4296",
  "topic 37": "pos=403,494 size=69x34 order=0 group=7311eef57cca line=368f701524ea",
  "topic 38": "pos=403,538 size=69x34 order=1 group=16ad3772f6ef line=ce8b2d07af90",
  "topic 39": "pos=-130.5,-363.5 size=78x38 order=1 group=b5f47e8ffe6a line=45ba77b9737c",
  "topic 4": "pos=625,-531.5 size=87x47 order=0 group=b3b86826dae0 line=702854e2b9f5",
  "topic 40": "pos=-260,-451.5 size=121x47 order=0 group=dade6122c865 line=0ccc63e2c7dc",
  "topic 41": "pos=-385,-519.5 size=69x34 order=0 group=d6b24948b3e1 line=05f1dcbbda4d",
  "topic 42": "pos=-393.5,-429.5 size=86x34 order=1 group=22ff3e2ff78e line=653fa4771554",
  "topic 43": "pos=-569.5,-475.5 size=206x34 order=0 group=a37001cdd864 line=f76dfd7a4292",
  "topic 44": "pos=-542,-407.5 size=151x82 order=1 group=b75329eb8c79 line=3523393064d4",
  "topic 45": "pos=-251,-317.5 size=103x34 order=1 group=75863fd2ad68 line=191987e795ae",
  "topic 46": "pos=-367,-339.5 size=69x34 order=0 group=dc526c2eaba1 line=3f2b03aab15f",
  "topic 47": "pos=-367,-295.5 size=69x34 order=1 group=9d4afbee4d31 line=0678529c2fe8",
  "topic 48": "pos=-260,-229.5 size=121x47 order=2 group=7f64c6f662c8 line=3adedc430c7d",
  "topic 49": "pos=-385,-251.5 size=69x34 order=0 group=dd7043e9a2a0 line=0310ad146aa2",
  "topic 5": "pos=621.5,-481 size=80x34 order=1 group=ced04af27047 line=6faca698a2d3",
  "topic 50": "pos=-393.5,-207.5 size=86x34 order=1 group=7ed211b7bba8 line=bd728387fd89",
  "topic 500": "pos=600,500 size=69x34 order=undefined group=0c529ad7a026 line=da39a3ee5e6b",
  "topic 51": "pos=-130.5,-12.5 size=78x38 order=3 group=b8103cfdb2c7 line=d7362681835b",
  "topic 52": "pos=-243,-100.5 size=87x47 order=0 group=2a889a325772 line=f7e49923978c",
  "topic 53": "pos=-419.5,-163.5 size=206x34 order=0 group=7940786d8ad4 line=14dfd50bb3b0",
  "topic 54": "pos=-368,-78.5 size=103x34 order=1 group=3d21fadc7150 line=8d24bbd5a823",
  "topic 55": "pos=-524.5,-107 size=150x59 order=0 group=6204d9b6b628 line=bcf978b99bf5",
  "topic 56": "pos=-501.5,-44 size=104x47 order=1 group=940c2f6ea7fe line=de9eeca9ab1e",
  "topic 57": "pos=-234,28.5 size=69x34 order=1 group=d7c97978ca52 line=d54bfe9687c3",
  "topic 58": "pos=-333,6.5 size=69x34 order=0 group=53822b7b4a2e line=62f84db9acb3",
  "topic 59": "pos=-333,50.5 size=69x34 order=1 group=f7135261c7d8 line=d1b34dc5e4ad",
  "topic 6": "pos=391.5,-408.5 size=80x34 order=1 group=72eca6e574f6 line=f8a23a292792",
  "topic 60": "pos=-260,116.5 size=121x47 order=2 group=768e89a5044b line=16ab3beb3c16",
  "topic 61": "pos=-385,94.5 size=69x34 order=0 group=4147cee0e7c5 line=859c81c1cd05",
  "topic 62": "pos=-385,138.5 size=69x34 order=1 group=ebb7f98b2877 line=f9f71dd8fe5b",
  "topic 63": "pos=-216,351 size=249x38 order=5 group=dbf1279423a3 line=8761c60f26b6",
  "topic 64": "pos=-422.5,263 size=104x47 order=0 group=d063113eaf0a line=37ede42beae8",
  "topic 65": "pos=-547.5,182.5 size=86x34 order=0 group=5a84fdabefb9 line=f2b6e580e209",
  "topic 66": "pos=-579.5,285 size=150x59 order=1 group=537c8f6a1b3f line=2283c269a934",
  "topic 67": "pos=-744.5,239 size=120x59 order=0 group=b53d617f4d05 line=f84e6f8bc1ae",
  "topic 68": "pos=-760,319.5 size=151x82 order=1 group=cbb9131d01af line=1882af4c714e",
  "topic 69": "pos=-405,409.5 size=69x34 order=1 group=d5dc37826783 line=e926bbc52454",
  "topic 7": "pos=493,-437 size=63x34 order=0 group=bc87effc90d9 line=36449079b3be",
  "topic 70": "pos=-512.5,387.5 size=86x34 order=0 group=7cba076e9d2a line=3d0050f48def",
  "topic 71": "pos=-504,431.5 size=69x34 order=1 group=c038bc53b31c line=7326c1f7aae2",
  "topic 72": "pos=-439.5,497.5 size=138x47 order=2 group=adef3177b93a line=35a24638b9da",
  "topic 73": "pos=-641.5,475.5 size=206x34 order=0 group=421fac015705 line=174629ac4be6",
  "topic 74": "pos=-573,519.5 size=69x34 order=1 group=475d677d98eb line=83694791f45f",
  "topic 8": "pos=513.5,-386.5 size=104x47 order=1 group=4104efa0e410 line=80ec675c725d",
  "topic 9": "pos=232.5,-301.5 size=80x64 order=1 group=a47637fd0ca2 line=5de042427663",
}
`;
